Pull request #994: fix/AG-9132 fix button color
Merge in EXTENSIONS/browser-extension from AG-9132 to feature/AG-2737

Squashed commit of the following:

commit 1af979b264da0d3d3ac1a84c92209e27aef6e39a
Merge: 6ed990536 cdc961dd5
Author: Maxim Topciu <maximtop@gmail.com>
Date:   Mon Jul 19 18:54:41 2021 +0300

    Merge branch 'feature/AG-2737' into AG-9132

commit 6ed990536912a2b1713811337d7a5e48bcc772b5
Merge: 5d957d302 599f51da5
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Mon Jul 19 18:39:31 2021 +0300

    Merge branch 'feature/AG-2737' into AG-9132

commit 5d957d302d68e76f8623e293fcaef72d2c5e1bd1
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Mon Jul 19 17:45:22 2021 +0300

    fix button color

--- a/Extension/src/pages/options/styles/button.pcss
+++ b/Extension/src/pages/options/styles/button.pcss
@@ -172,6 +172,10 @@
                 background-color: var(--gray100);
             }
         }
+
+        &--red {
+            color: var(--red400);
+        }
     }
 }
 
@@ -194,6 +198,10 @@
             &:hover {
                 background-color: var(--gray900);
             }
+        }
+        
+        &--red {
+            color: var(--red400);
         }
     }
 }
